--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <meta charset="utf-8">
 
   <title> Casino en ligne </title>
+  <link rel="stylesheet" href="style.css">
 
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -17,16 +18,7 @@
 
 <body>
   <p>www.casino-en-ligne.fr</p>
+<h1>h1. Machine à sous</h1>
 
-  <h1>Machine à sous</h1>
-    
-  <button type="button" onclick=machineASous(); id="boutonStart" class="btn btn-default">Start</button><br><br>
-    <p>Crédits : <input id="crédit" type="text" value=20 disabled="disabled"></p>
-    <form>
-  <fieldset disabled>
-    <div class="form-group">
-      <label for="disabledTextInput">Disabled input</label>
-      <input type="text" id="disabledTextInput" class="form-control" placeholder="Disabled input">
-    </div>
-      
+  <button type="button" onclick=machineASous(); id="boutonStart" class="btn btn-default">Start</button>
 </body>
