--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
 </head>
 
 <body>
-  <p>www.casino-en-ligne.fr</p>
-<h1>Machine à sous</h1>
+    
+ <div align="center">
+    <p>www.casino-en-ligne.fr</p>
+    <h1>Machine à sous</h1>
 
     <button type="button" onclick=machineASous(); id="boutonStart" class="btn btn-default">Start</button><br><br>
     <p>Crédits : <input id="credit" type="text" value=20 disabled="disabled"></p>
