--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class=carre>
         <h1>La machine à sous !</h1>
      
-        <button type="button" onclick=machineASous(); id="boutonStart" class="btn btn-default">Jouer</button><br><br>
+        <button type="button" onclick="machineASous();" id="boutonStart" class="btn btn-default">Jouer</button><br><br>
         <p>Crédits : <input id="credit" type="text" value=20 disabled="disabled"></p>
         <img id="img1" src="image/img_3.png" /><img id="img2" src="image/img_3.png" /><img id="img3" src="image/img_3.png" /><img id="img4" src="image/img_3.png"/>
         
