--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
         <img id="img1" src="image/img_3.png" /><img id="img2" src="image/img_3.png" /><img id="img3" src="image/img_3.png" /><img id="img4" src="image/img_3.png"/>
         
     </div>
-    <script src="js/script.js"></script>
   </div>
+    
+    <script src="js/animation.js"></script>
+    <script src="js/script.js"></script>
+    <script>
+        init();
+    </script>
 
 </body>
