--- a/index.html
+++ b/index.html
@@ -1,23 +1,19 @@
 <head>
 
   <meta charset="utf-8">
-
   <title> Casino en ligne </title>
   <link rel="stylesheet" href="style.css">
-
+  <!-- Intégration du JQuery minifié -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" charset="utf-8"></script>
-
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
   <!-- Optional theme -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
-
+  <!-- Javascript de la librairie Toastr -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js" charset="utf-8"></script>
+  <!-- CSS de la librairie Toastr -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
 </head>
 <body>
@@ -26,22 +22,20 @@
     <p>www.casino-en-ligne.fr</p>
   </div>
 
-  <div class ="main" align="center">
+  <div class ="main" align="center"
+  <div class=carre>
+    <h1>La machine à sous !</h1>
+    <button type="button" onclick="machineASous();" id="boutonStart" class="btn btn-default">Jouer</button><br><br>
+    <p>Crédits : <input id="credit" type="text" value=20 disabled="disabled"></p>
+    <img id="img1" src="image/img_3.png" /><img id="img2" src="image/img_3.png" /><img id="img3" src="image/img_3.png" /><img id="img4" src="image/img_3.png"/>
 
-    <div class=carre>
-      <h1>La machine à sous !</h1>
-
-      <button type="button" onclick="machineASous();" id="boutonStart" class="btn btn-default">Jouer</button><br><br>
-      <p>Crédits : <input id="credit" type="text" value=20 disabled="disabled"></p>
-      <img id="img1" src="image/img_3.png" /><img id="img2" src="image/img_3.png" /><img id="img3" src="image/img_3.png" /><img id="img4" src="image/img_3.png"/>
-
-    </div>
   </div>
+</div>
 
-  <script src="js/animation.js"></script>
-  <script src="js/script.js"></script>
-  <script>
-  init();
-  </script>
+<script src="js/animation.js"></script>
+<script src="js/script.js"></script>
+<script>
+init();
+</script>
 
 </body>
