--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <p>www.casino-en-ligne.fr</p>
   </div>
 
-  <div class ="main" align="center"
-  <div class=carre>
+  <div class ="main" align="center">
+  <div class="carre">
     <h1>La machine à sous !</h1>
     <button type="button" onclick="machineASous();" id="boutonStart" class="btn btn-default">Jouer</button><br><br>
     <p>Crédits : <input id="credit" type="text" value=20 disabled="disabled"></p>
