correction number score

--- a/index.html
+++ b/index.html
@@ -18,10 +18,7 @@
 </head>
 <body>
 
-  <div class = "site" align="center">
     <p>www.casino-en-ligne.fr</p>
-  </div>
-
   <div class ="main" align="center">
     <div class="gui">
       <h1>La machine à sous !</h1>
@@ -29,17 +26,17 @@
       <p>Crédits : <input id="credit" type="text" value=20 disabled="disabled"></p>
     </div>
     <div class="carre">
-    <img id="img1" src="image/img_3.png" /><img id="img2" src="image/img_3.png" /><img id="img3" src="image/img_3.png" /><img id="img4" src="image/img_3.png"/>
-    <div class="score">
-      <p>Votre score :<input id="score" type="text" value="0" disabled="disabled"></p>
+      <img id="img1" src="image/img_3.png" /><img id="img2" src="image/img_3.png" /><img id="img3" src="image/img_3.png" /><img id="img4" src="image/img_3.png"/>
+      <div class="score">
+        <h3>Votre score : <input id="score" type="text" value="0" disabled="disabled"></h3>
+      </div>
     </div>
   </div>
-</div>
 
-<script src="js/animation.js"></script>
-<script src="js/script.js"></script>
-<script>
-init();
-</script>
+  <script src="js/animation.js"></script>
+  <script src="js/script.js"></script>
+  <script>
+  init();
+  </script>
 
 </body>
